@@ -18,8 +18,6 @@
 
  * Support LDAP-based ACLs in addition to file system ACLs.
 
- * Support IPv6.
-
  * The port that remctld uses is rather stupid and frequently blocked due
    to Windows viruses and other issues.  We need to transition to a new
    port, and hopefully one that's registered with IANA.
